# bevytest

./: Cargo.toml
assets/sprites/: creecher.json  player.ase
assets/tiles/: creecher.ase
src/: main.rs
src/animation/: mod.rs
src/player/: mod.rs
src/sprites/: mod.rs
