[package]
name = "bevytest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
bevy_embedded_assets = "0.7"
bevy_pixel_camera = "0.4"
bevy-inspector-egui = "0.18"
bevy_mod_aseprite = "0.4"

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
