[package]
name = "bevytest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
bevy_pixel_camera = "0.4"
bevy-inspector-egui = "0.18"
bevy_asset_loader = "0.16"

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
